--- a/src/wp-content/themes/tuleva/scss/_second-pillar-calculator.scss
+++ b/src/wp-content/themes/tuleva/scss/_second-pillar-calculator.scss
@@ -8,7 +8,7 @@
   user-select: none;
   pointer-events: none;
   color: white;
-  transform: translate(-12px, 8px);
+  transform: translate(-12px, 7px);
   width: $custom-range-thumb-width;
   text-align: center;
   margin-top: -12px;
